[+] add ajax script in Home/Index

--- a/AJAX.WEB/AJAX.WEB.csproj
+++ b/AJAX.WEB/AJAX.WEB.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AJAX.BL\AJAX.BL\AJAX.BL.csproj" />
+    <ProjectReference Include="..\AJAX.DAL\AJAX.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
